Fixing the problem with overlapping courses

--- a/app/assets/stylesheets/selected_courses.scss
+++ b/app/assets/stylesheets/selected_courses.scss
@@ -26,9 +26,6 @@ th#year-col{
 .quarter{
 	min-height:114px;
 }
-div.quarters-2, div.quarters-3{
-	width: 200% !important;
-}
 .course-div{
 	position: relative;
 }
